<resources>
    <string name="app_name">Water monitoring Stream gauging</string>
    <string name="navigation_drawer_open">Open navigation window</string>
    <string name="navigation_drawer_close">Close navigation window</string>
    <string name="facebook_app_id" translatable="false">388149928199351</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_Registro">Register</string>
    <string name="title_activity_agregar">Add</string>
    <string name="Google_Key" translatable="false">AIzaSyBF0VFFF-7ojo6bKf_G81kq2cazEhaB2cc</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="cancel_login">Session canceled</string>
    <string name="error_login">Error detected, try again later.</string>
    <string name="logout">Log out</string>
    <string name="logIn">Log in</string>
    <string name="sesión">Session</string>
    <string name="insertar">Add</string>
    <string name="visualizar">View</string>
    <string name="modificar">My samples</string>
    <string name="nombre">Name</string>
    <string name="registrar">Check in</string>
    <string name="po2">SATDO * (Dissolved Oxygen Concentration Saturation)</string>
    <string name="dbo">BOD *</string>
    <string name="nh4">N-NH4 *</string>
    <string name="CF">FC *</string>
    <string name="pH">pH *</string>
    <string name="Fosfato">Phosphate *</string>
    <string name="Nitrato">Nitrate *</string>
    <string name="T" translatable="false">T *</string>
    <string name="Turbidez">Turbidity *</string>
    <string name="Solidos_totales">Total solids *</string>
    <string name="Biodiversidad">Biodiversity Index *</string>
    <string name="Aforo">Stream gauging</string>
    <string name="SAAM">MBAS (methylene blue active substances)</string>
    <string name="ST">ST</string>
    <string name="SST">TSS</string>
    <string name="Ssed">Ssed</string>
    <string name="SD">SD</string>
    <string name="GYA">FOG (Fats, Oils and Grease)</string>
    <string name="PO4">PO4</string>
    <string name="EC">EC (Electric conductivity)</string>
    <string name="DQO">COD (Chemical Oxygen Demand)</string>
    <string name="nh4Opc">N-NH4</string>
    <string name="CFOpc">FC</string>
    <string name="pHOpc">pH</string>
    <string name="NitratoOPC">Nitrate</string>
    <string name="TOpc" translatable="false">T</string>
    <string name="TurbidezOpc">Turbidity</string>
    <string name="FosfatoOpc">Phosphate</string>
    <string name="Solidos_totalesOpc">Total solids</string>
    <string name="BiodiversidadOpc">Biodiversity Index</string>
    <string name="po2Opc">SATDO (Dissolved Oxygen Concentration Saturation)</string>
    <string name="dboOpc">BOD</string>
    <string name="tipo_POI">POI\'s type *</string>
    <string name="tipo_POI_lista">POI\'s type =</string>
    <string name="nombre_institucion">Institution\'s name *</string>
    <string name="Fecha">Date *</string>
    <string name="FechaBoton">Date</string>
    <string name="nombre_estacion">POI\'s Name *</string>
    <string name="Latitud">Latitude *</string>
    <string name="Longitud">Longitude *</string>
    <string name="Altitud">Altitude/Elevation *</string>
    <string name="Latitud_window">Latitude</string>
    <string name="Longitud_window">Longitude</string>
    <string name="Temp_Rio">Water  temperature</string>
    <string name="Area_Cause">River\'s flow area</string>
    <string name="Velocidad">Water velocity</string>
    <string name="Indice_general">Index</string>
    <string name="mensaje_error_indice">You must choose an index</string>
    <string name="mensaje_error_requeridos">Required fields were not filled</string>
    <string name="mensaje_error_tipoPOI">You must choose a type for this POI</string>
    <string name="requeridos">Fields with * are required</string>
    <string name="documento_exito">Document added successfully</string>
    <string name="documento_fallido">Document has not been successfully added! Please try again later.</string>
    <string-array name="nombre_indices">
        <item>Index *</item>
        <item>Dutch Index</item>
        <item>NSF-WQI Index</item>
        <item>BMWP-CR Index</item>
        <item>Without Index</item>
        <item>QTWQI Index</item>
    </string-array>
    <string-array name="nombre_indices_spinner_menu">
        <item>Dutch Index</item>
        <item>NSF-WQI Index</item>
        <item>BMWP-CR Index</item>
        <item>Without Index</item>
        <item>QTWQI Index</item>
    </string-array>
    <string-array name="nombre_kits">
        <item>Kit *</item>
        <item>LMRHI-UNA</item>
        <item>LaMotte Deluxe</item>
        <item>LaMotte Complete</item>
        <item>LaMotte Earth Force</item>
        <item>LaMotte Classroom Kit</item>
        <item>HANNA</item>
        <item>Other</item>
    </string-array>
    <string name="server" translatable="false">https://monitoreoagua.ucr.ac.cr/webservices/</string>
    <string-array name="tipos_POI">
        <item>POI Type *</item>
        <item>Thermal water</item>
        <item>Surface source</item>
        <item>Nascent</item>
        <item>Well</item>
    </string-array>
    <string name="no_river">Unnamed</string>
    <string name="river_select">Select river name *</string>
    <string name="nombre_rio_label">River name</string>
    <string name="indice_usado">Index =</string>
    <string name="valor_indice">Value</string>
    <string name="color_indice">Color =</string>
    <string name="mensaje_editar_borrar">Only data for the last ten days are displayed</string>
    <string name="no_hay_documentos">This user has not added any water samples in the last 10 days</string>
    <string name="error_cerrar_sesion">Could not sign out</string>
    <string name="no_session">Not logged in</string>
    <string name="error_iniciar_sesion">An error occurred while logging in</string>
    <string name="ad_borrar">Are you sure to delete the sample?</string>
    <string name="ad_titulo">Delete sample?</string>
    <string name="ed_bo_eliminado_exito">Deleted sucessfully</string>
    <string name="ed_bo_eliminado_error">Failed to delete sample</string>
    <string name="no_hay_T">Sample without temperature</string>
    <string name="No_ID">The sample you want to modify can not be found</string>
    <string name="mensaje_error_GeoLocation">Error occurred. Please, try again</string>
    <string name="pais">Country *</string>
    <string name="area_admin_1">Administrative area level 1 *</string>
    <string name="area_admin_2">Administrative area level 2 *</string>
    <string name="area_admin_3">Administrative area level 3 *</string>
    <string name="datos_opcionales">Optional Data</string>
    <string name="datos_obligatorios">Required Data</string>
    <string name="datos_generales">General Data</string>
    <string name="ad_descarga">Download sample</string>
    <string name="ad_descarga_m">Choose a downloading Format</string>
    <string name="ed_no_descarga">Unable to download sample, please try again later</string>
    <string name="ed_si_descarga">Sample successfully downloaded.</string>
    <string name="ad_error_escritura">Permission is required to save the document to the phone</string>
    <string name="ad_falta_permiso">Lack of permissions</string>
    <string name="men_no_hay_indice">No index samples found</string>
    <string name="archivo_no_creado">File could not be created!</string>
    <string name="datos_fotos">Images</string>
    <string name="foto1">Image 1</string>
    <string name="foto2">Image 2</string>
    <string name="foto3">Image 3</string>
    <string name="foto4">Image 4</string>
    <string name="palabras_claves">Enter 3 keywords separated by space</string>
    <string name="titulo_palabras_claves">Keywords</string>
    <string name="tamano_imagen_incorrecto">Images must weigh 4Mb or less</string>
    <string name="title_activity_prueba">Test</string>
    <string name="usuario_f">User</string>
    <string name="nomb_institucion_f">Institution\'s name</string>
    <string name="nomb_estacion_f">POI\'s Name</string>
    <string name="direccion_f">Address</string>
    <string name="fecha_ini_f">From</string>
    <string name="fecha_fin_f">To</string>
    <string name="btn_filtrar_f">Data selection</string>
    <string name="sel_filtros_f">Select data</string>
    <string name="mensaje_f">* Empty fields are omitted</string>
    <string name="error_filtros">Error occurred. Please, try again</string>
    <string name="filtros_sin_datos">Query does not produce data</string>
    <string-array name="nombre_indices_f">
        <item>Index</item>
        <item>Dutch Index</item>
        <item>NSF-WQI Index</item>
        <item>BMWP-CR Index</item>
        <item>Without Index</item>
        <item>QTWQI Index</item>
    </string-array>
    <string-array name="nombre_kits_f">
        <item>Kit</item>
        <item>LMRHI-UNA</item>
        <item>LaMotte Deluxe</item>
        <item>LaMotte Complete</item>
        <item>LaMotte Earth Force</item>
        <item>LaMotte Classroom Kit</item>
        <item>HANNA</item>
        <item>Other</item>
    </string-array>
    <string name="feedback_temp_title">"For the DO levels in this POI, "</string>
    <string name="feedback_temp_26">production of cold water species will be severely affected</string>
    <string name="feedback_temp_20">unlimited production of non-salmonid fish (e.g., trout)</string>
    <string name="feedback_temp_14">unlimited production of non-salmonid fish (e.g., trout)</string>
    <string name="feedback_temp_10">Undefined data</string>
    <string name="feedback_temp_7">Undefined data</string>
    <string name="feedback_temp_4">Undefined data</string>
    <string name="feedback_temp_no_definido">Undefined data</string>
    <string name="keywords_no_existe">Undefined</string>
    <string name="keywords_no">No</string>
    <string name="keywords_palabra">Key words</string>
    <string name="keywords_clave">defined</string>
    <string name="cargando_main">Data loading</string>
    <string name="cargando_titulo">Please wait</string>
    <string name="no_internet_message">No connection</string>
    <string name="reintentar">Try again</string>
    <string name="salir">Logout</string>
    <string name="sin_internet">No Internet access</string>
    <string name="ver_mas">CLICK TO SEE MORE</string>
    <string name="seleccionar_otro">Choose another POI</string>
    <string name="calcular_diferencia">Compute difference</string>
    <string name="no_markers">Troubles loading data, check internet connection</string>
    <string name="no_datos_indice">Not enough data to compute index</string>
    <string name="tiempo_final_aforo">End time</string>
    <string name="initial_time_aforo">Initial time</string>
    <string name="reference_start_aforo">Start water level reference (m)</string>
    <string name="reference_end_aforo">End water level reference</string>
    <string name="used_method_aforo">Method used</string>
    <string name="comment_aforo">Comments</string>
    <string name="discharge_aforo">Discharge computed</string>
    <string name="cross_sectional_aforo">Cross sectional area</string>
    <string name="distance_aforo">Distance over the river (m)</string>
    <string name="depth_aforo">Depth (m)</string>
    <string name="speed_aforo">Speed (m/s)</string>
    <string name="area_section_aforo">Area by section</string>
    <string name="discharge_section_aforo">Discharge by section</string>
    <string name="edit_section_aforo">Delete</string>
    <string name="add_section_aforo">Add section</string>
    <string name="compute_stream_gauging">Compute stream gauging</string>
    <string name="measurement_method_aforo">Measurement method</string>
    <string name="insert_aforo">Insert stream gauging</string>
</resources>