<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- A CardView that contains data for each measurement -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="7dp"
        card_view:cardCornerRadius="7dp"
        card_view:cardMaxElevation="7dp"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/distance_aforo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="@+id/distanceAforoAction"
                    android:imeActionLabel="@string/distance_aforo"
                    android:hint="@string/distance_aforo"
                    android:imeOptions="actionUnspecified"
                    android:inputType="numberDecimal"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/depth_aforo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="@+id/depthAforoAction"
                    android:imeActionLabel="@string/depth_aforo"
                    android:hint="@string/depth_aforo"
                    android:imeOptions="actionUnspecified"
                    android:inputType="numberDecimal"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/speed_aforo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="@+id/speedAforoAction"
                    android:imeActionLabel="@string/speed_aforo"
                    android:hint="@string/speed_aforo"
                    android:imeOptions="actionUnspecified"
                    android:inputType="numberDecimal"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/area_section_aforo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="@+id/areaSectionAforoAction"
                    android:imeActionLabel="@string/area_section_aforo"
                    android:hint="@string/area_section_aforo"
                    android:imeOptions="actionUnspecified"
                    android:inputType="none"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/discharge_section_aforo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="@+id/dischargeSectionAforoAction"
                    android:imeActionLabel="@string/discharge_section_aforo"
                    android:hint="@string/discharge_section_aforo"
                    android:imeOptions="actionUnspecified"
                    android:inputType="none"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/comment_section_aforo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="@+id/commentSectionAforoAction"
                    android:imeActionLabel="@string/comment_aforo"
                    android:hint="@string/comment_aforo"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="3"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/edit_section_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/edit_section_aforo"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
