<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/white">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_weight="0.15">

        <TextView
            android:text="@string/nomb_estacion_f"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/estacion"
            android:textStyle="bold"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtEstacion"
            android:padding="10dp"/>

        <TextView
            android:text="@string/Latitud_window"
            android:layout_height="wrap_content"
            android:id="@+id/latitud"
            android:layout_width="150dp"
            android:textStyle="bold"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtLatitud"
            android:padding="10dp"/>

        <TextView
            android:text="@string/Longitud_window"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/longitud"
            android:textStyle="bold"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtLongitud"
            android:padding="10dp"/>
    </GridLayout>
    <TextView
        android:text="Clic para ver más"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/verMas"
        android:padding="10dp"
        android:textAlignment="center"
        android:background="@color/material_blue_500"
        android:textColor="@color/white"/>

</LinearLayout>